src/test/resources/errors/02-error.c
int bad_declaration(void, void);

extern int main () {
    return 0;
}